# Class_Schedule

./: Cargo.toml  README.md  package-lock.json  package.json
backend/: database.json  server.js
db/: Cargo.toml
db/src/: lib.rs
db/src/create/: mod.rs
db/src/define/: mod.rs
db/src/delete/: mod.rs
db/src/read/: mod.rs  read.rs  structs.rs
db/src/update/: mod.rs
db/src/util/: error.rs  mod.rs  strings.rs  validation.rs
server/: .gitignore  Cargo.toml  package-lock.json  package.json  wrangler.toml
server/src/: lib.rs  test.rs
server/src/auth/: mod.rs
server/src/crypto/: mod.rs
server/src/endpoints/: cf.rs  class.rs  csr.rs  define.rs  faculty.rs  feature.rs  login.rs  mod.rs  preference.rs  rf.rs  room.rs  schedule.rs  user.rs
server/src/wasm/: mod.rs
src/: APITest.jsx  App.jsx  ClassCard.jsx  ViewSchedulePage.jsx  getClassLogic.jsx  index.js  main.jsx
src/DownloadData/: GridExportContent.jsx
src/api/: APIDataProvider.jsx  api.js  uploadClassLogic.jsx
src/editFeature/: editFeature.jsx
src/gridView/: gridView.css  gridView.jsx
src/homepage/: homepage.css  homepage.jsx
src/listView/: listView.css  listView.jsx
src/main/: main.jsx
