[workspace]
resolver = "2"
members = [ "server", "db" ]

[workspace.package]
edition = "2021"
authors = [ "BergenCloninger <105687249+BergenCloninger@users.noreply.github.com>" ]

[workspace.dependencies]
worker = { version="0.4.2", features=["http", "d1"] }
worker-macros = { version="0.4.2", features=["http"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"